--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "air-native-template-full",
   "version": "1.0.0",
-  "description": "React Native Template",
+  "description": "React Native Full Template",
   "repository": "git@github.com:AirNative/RNTemplateFull.git",
   "author": "Dmitrii Vasiliev <slimecube98@gmail.com>",
   "license": "MIT"
