--- a/template/ios/ProjectName/Info.plist
+++ b/template/ios/ProjectName/Info.plist
@@ -22,6 +22,18 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>comgooglemaps</string>
+		<string>twitter</string>
+		<string>whatsapp</string>
+		<string>fb</string>
+		<string>google</string>
+		<string>instagram</string>
+		<string>vk</string>
+		<string>fb-messenger</string>
+		<string>tg</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppleMusicUsageDescription</key>
@@ -35,11 +47,12 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location access is necessary to increase the comfort of using the application</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Access to the microphone is required so that the user can record audio or video with sound at the user&apos;s request</string>
+	<string>Access to the microphone is required so that the user can record audio or video with sound at the user's request</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Access to photos is required to upload photos as required by the user</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
@@ -56,17 +69,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>comgooglemaps</string>
-		<string>twitter</string>
-		<string>whatsapp</string>
-		<string>fb</string>
-		<string>google</string>
-		<string>instagram</string>
-		<string>vk</string>
-		<string>fb-messenger</string>
-		<string>tg</string>
-	</array>
 </dict>
 </plist>
