--- a/template/ios/ProjectName/Info.plist
+++ b/template/ios/ProjectName/Info.plist
@@ -50,6 +50,8 @@
 	<string>Access to the microphone is required so that the user can record audio or video with sound at the user's request</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Access to photos is required to upload photos as required by the user</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Access to contacts is required to provide simple way to find persons in our app</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
