--- a/template/package.json
+++ b/template/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/netinfo": "^6.0.0",
     "react": "^17.0.2",
     "react-native": "^0.65.1",
+    "react-native-contacts": "^7.0.4",
     "react-native-bootsplash": "^3.2.6",
     "react-native-codegen": "^0.0.8",
     "react-native-fingerprint-scanner": "^6.0.0",
