--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,7 @@
     "react-native-inappbrowser-reborn": "3.6.3",
     "react-native-navigation-bar-color": "2.0.2",
     "react-native-onesignal": "4.5.0",
-    "react-native-permissions": "3.0.5",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "3.4.0",
     "react-native-share": "8.2.2",
@@ -43,7 +43,10 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-private-methods ": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   },
   "jest": {
     "preset": "react-native"
