--- a/template/ios/ProjectName/Info.plist
+++ b/template/ios/ProjectName/Info.plist
@@ -5,7 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Declutter The Mind</string>
+	<string>ProjectName</string>
+	<key>LSMinimumSystemVersion</key>
+  	<string>13.0</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
