--- a/template/android/app/src/main/AndroidManifest.xml
+++ b/template/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,16 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/BootTheme">
+      <provider
+          android:name="androidx.core.content.FileProvider"
+          android:authorities="com.projectname.provider"
+          android:grantUriPermissions="true"
+          android:exported="false">
+          <meta-data
+              android:name="android.support.FILE_PROVIDER_PATHS"
+              android:resource="@xml/provider_paths"/>
+      </provider>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
