--- a/template/package.json
+++ b/template/package.json
@@ -33,6 +33,7 @@
     "react-native-webview": "11.23.1",
     "react-native-webview-invoke": "0.6.2",
     "react-native-iap": "12.15.1",
+    "react-native-in-app-review": "^4.3.3",
     "react-native-contacts": "7.0.4"
   },
   "devDependencies": {
