--- a/template/package.json
+++ b/template/package.json
@@ -15,13 +15,16 @@
     "@react-native-community/netinfo": "6.0.0",
     "@react-native/metro-config": "0.72.9",
     "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "^0.82.1",
     "react-native-bootsplash": "4.7.5",
     "react-native-codegen": "0.0.8",
+    "react-native-contacts": "7.0.4",
     "react-native-fingerprint-scanner": "6.0.0",
-    "react-native-keep-awake": "4.0.0",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-iap": "12.15.1",
+    "react-native-in-app-review": "^4.3.3",
     "react-native-inappbrowser-reborn": "3.6.3",
+    "react-native-keep-awake": "4.0.0",
     "react-native-navigation-bar-color": "2.0.2",
     "react-native-onesignal": "5.2.4",
     "react-native-permissions": "^4.1.5",
@@ -31,23 +34,20 @@
     "react-native-track-player": "3.2.0",
     "react-native-url-polyfill": "1.3.0",
     "react-native-webview": "11.23.1",
-    "react-native-webview-invoke": "0.6.2",
-    "react-native-iap": "12.15.1",
-    "react-native-in-app-review": "^4.3.3",
-    "react-native-contacts": "7.0.4"
+    "react-native-webview-invoke": "0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "^18.2.0",
-    "@babel/plugin-transform-class-properties": "^7.24.7",
-    "@babel/plugin-transform-private-methods": "^7.24.7",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
+    "react-test-renderer": "^18.2.0"
   },
   "jest": {
     "preset": "react-native"
