--- a/template/package.json
+++ b/template/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli": "11.3.6",
     "@react-native-community/geolocation": "2.0.2",
     "@react-native-community/netinfo": "6.0.0",
     "@react-native/metro-config": "0.72.9",
