--- a/template/android/build.gradle
+++ b/template/android/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "34.0.0"
+        buildToolsVersion = "36.0.0"
         minSdkVersion = 28
-        compileSdkVersion = 35
-        targetSdkVersion = 35
+        compileSdkVersion = 36
+        targetSdkVersion = 36
         ndkVersion = "28.0.12674087"
         androidXAnnotation = "1.1.0"
         androidXBrowser = "1.0.0"
-        kotlinVersion = "1.9.0"
+        kotlinVersion = "2.1.20"
     }
     repositories {
         google()
@@ -17,36 +17,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:8.5.1')
+        classpath('com.android.tools.build:gradle')
         classpath("com.facebook.react:react-native-gradle-plugin")
         
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
-}
-
-allprojects {
-    repositories {
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
-        }
-        maven {
-            // Android JSC is installed from npm
-            url("$rootDir/../node_modules/jsc-android/dist")
-        }
-        mavenCentral {
-            // We don't want to fetch react-native from Maven Central as there are
-            // older versions over there.
-            content {
-                excludeGroup "com.facebook.react"
-            }
-        }
-        google()
-        jcenter()
-        mavenCentral()
-        maven { url 'https://www.jitpack.io' }
     }
 }
