--- a/template/android/build.gradle
+++ b/template/android/build.gradle
@@ -6,17 +6,18 @@ buildscript {
         minSdkVersion = 28
         compileSdkVersion = 36
         targetSdkVersion = 36
-        ndkVersion = "27.1.12297006"
+        ndkVersion = "28.0.12674087"
         androidXAnnotation = "1.1.0"
         androidXBrowser = "1.0.0"
         kotlinVersion = "2.1.20"
     }
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:8.12.1')
+        classpath('com.android.tools.build:gradle')
         classpath("com.facebook.react:react-native-gradle-plugin")
         
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
