--- a/template/package.json
+++ b/template/package.json
@@ -14,11 +14,11 @@
     "@react-native-community/netinfo": "^11.4.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "react-native-bootsplash": "4.7.5",
+    "react-native-bootsplash": "^4.7.5",
     "react-native-contacts": "^8.0.7",
     "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-gesture-handler": "^2.29.1",
-    "react-native-iap": "12.15.1",
+    "react-native-iap": "^14.4.38",
     "react-native-in-app-review": "^4.4.2",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-keep-awake": "^4.0.0",
