--- a/template/package.json
+++ b/template/package.json
@@ -12,6 +12,7 @@
    "dependencies": {
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native/new-app-screen": "0.82.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-bootsplash": "^4.7.5",
