--- a/template/package.json
+++ b/template/package.json
@@ -9,48 +9,45 @@
     "test": "jest",
     "lint": "eslint ."
   },
-   "dependencies": {
-    "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-native/new-app-screen": "0.82.1",
-    "react": "19.1.1",
-    "react-native": "0.82.1",
-    "react-native-bootsplash": "^4.7.5",
-    "react-native-contacts": "^8.0.7",
-    "react-native-fingerprint-scanner": "^6.0.0",
-    "react-native-gesture-handler": "^2.29.1",
-    "react-native-iap": "^14.4.38",
-    "react-native-in-app-review": "^4.4.2",
-    "react-native-inappbrowser-reborn": "^3.7.0",
-    "react-native-keep-awake": "^4.0.0",
-    "react-native-navigation-bar-color": "^2.0.2",
-    "react-native-onesignal": "^5.2.14",
-    "react-native-permissions": "^5.4.4",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-share": "^12.2.0",
-    "react-native-track-player": "^4.1.2",
-    "react-native-url-polyfill": "^3.0.0",
-    "react-native-webview": "^13.16.0",
-    "react-native-webview-invoke": "^0.6.2"
+  "dependencies": {
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/geolocation": "2.0.2",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-native/metro-config": "0.72.9",
+    "react": "18.2.0",
+    "react-native": "^0.82.1",
+    "react-native-bootsplash": "4.7.5",
+    "react-native-codegen": "0.0.8",
+    "react-native-contacts": "7.0.4",
+    "react-native-fingerprint-scanner": "6.0.0",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-iap": "12.15.1",
+    "react-native-in-app-review": "^4.3.3",
+    "react-native-inappbrowser-reborn": "3.6.3",
+    "react-native-keep-awake": "4.0.0",
+    "react-native-navigation-bar-color": "2.0.2",
+    "react-native-onesignal": "5.2.4",
+    "react-native-permissions": "^4.1.5",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "3.4.0",
+    "react-native-share": "8.2.2",
+    "react-native-track-player": "3.2.0",
+    "react-native-url-polyfill": "1.3.0",
+    "react-native-webview": "11.23.1",
+    "react-native-webview-invoke": "0.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.82.1",
-    "@react-native/eslint-config": "0.82.1",
-    "@react-native/metro-config": "0.82.1",
-    "@react-native/typescript-config": "0.82.1",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.1",
-    "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "^18.2.0"
   },
   "jest": {
     "preset": "react-native"
